Read config from environment

--- a/python/client.ipynb
+++ b/python/client.ipynb
@@ -16,7 +16,9 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import os\n",
     "import urllib\n",
+    "\n",
     "import requests\n",
     "import polling"
    ]
@@ -38,20 +40,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "token_file = \"token.json\"\n",
-    "base_path = \"https://covid-modelling-stg.epcc.ed.ac.uk/api\"\n",
+    "token = os.getenv(\"API_TOKEN\")\n",
+    "assert token\n",
+    "\n",
+    "base_path = os.getenv(\"API_BASE_URL\", \"https://covid-modelling-stg.epcc.ed.ac.uk/api\")\n",
     "simulations_url = \"/\".join([base_path, \"simulations\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1064f870-6512-4b26-b021-65f0625a1edf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(token_file,'r') as f:\n",
-    "    token = json.load(f)[\"token\"]"
    ]
   },
   {
@@ -61,7 +54,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headers = {\"accept\":\"application/json; charset=utf-8\", \"Content-Type\": \"application/json\", \"Authorization\": \"Bearer \"+ token}"
+    "headers = {\n",
+    "    \"accept\":\"application/json; charset=utf-8\", \n",
+    "    \"Content-Type\": \"application/json\", \n",
+    "    \"Authorization\": \"Bearer \"+ token\n",
+    "}"
    ]
   },
   {
