Add Docker image for Julia client

--- a/julia/client.ipynb
+++ b/julia/client.ipynb
@@ -35,18 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "token_file = \"token.json\"\n",
-    "url = \"https://covid-modelling-stg.epcc.ed.ac.uk\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1816b2e2-f993-43af-94b1-a172479b79fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "token = JSON.parse(open(token_file))[\"token\"];"
+    "token = get(ENV, \"API_TOKEN\", \"\")\n",
+    "@assert !isempty(token)\n",
+    "url = get(ENV, \"API_BASE_URL\", \"https://covid-modelling-stg.epcc.ed.ac.uk\")"
    ]
   },
   {
@@ -243,7 +234,7 @@
     "tm = 0\n",
     "export_simulations_response = nothing\n",
     "while tm <= timeout\n",
-    "    export_simulations_response = HTTP.get(export_simulations_url, headers, query = export_simulations_params)\n",
+    "    export_simulations_response = HTTP.get(export_simulations_url, headers, query = export_simulations_params, status_exception = false)\n",
     "    if HTTP.status(export_simulations_response)==200\n",
     "        break\n",
     "    end\n",
@@ -265,15 +256,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.3",
+   "display_name": "Julia 1.7.3",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.7.3"
   }
  },
  "nbformat": 4,
