Add new model-specific endpoints

--- a/python/client.ipynb
+++ b/python/client.ipynb
@@ -20,7 +20,7 @@
     "import urllib\n",
     "\n",
     "import requests\n",
-    "import polling"
+    "import polling\n"
    ]
   },
   {
@@ -43,8 +43,7 @@
     "token = os.getenv(\"API_TOKEN\")\n",
     "assert token\n",
     "\n",
-    "base_path = os.getenv(\"API_BASE_URL\", \"https://covid-modelling-stg.epcc.ed.ac.uk/api\")\n",
-    "simulations_url = \"/\".join([base_path, \"simulations\"])"
+    "base_path = os.getenv(\"API_BASE_URL\", \"https://covid-modelling-stg.epcc.ed.ac.uk/api\")"
    ]
   },
   {
@@ -54,6 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model_slug = \"sir-ode-python\"\n",
     "headers = {\n",
     "    \"accept\":\"application/json; charset=utf-8\", \n",
     "    \"Content-Type\": \"application/json\", \n",
@@ -77,42 +77,20 @@
    "outputs": [],
    "source": [
     "inputJSON = {\n",
-    "  \"model_slug\": \"sir-ode-python\",\n",
-    "  \"config\": {\n",
-    "    \"p\": [\n",
-    "      0.5,\n",
-    "      0.25\n",
-    "    ],\n",
-    "    \"u0\": [\n",
-    "      0.99,\n",
-    "      0.01,\n",
-    "      0\n",
-    "    ],\n",
-    "    \"tspan\": [\n",
-    "      0,\n",
-    "      10000\n",
-    "    ]\n",
-    "  }\n",
+    "  \"p\": [\n",
+    "    0.5,\n",
+    "    0.25\n",
+    "  ],\n",
+    "  \"u0\": [\n",
+    "    0.99,\n",
+    "    0.01,\n",
+    "    0\n",
+    "  ],\n",
+    "  \"tspan\": [\n",
+    "    0,\n",
+    "    10000\n",
+    "  ]\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d783f6e4-fc56-4412-a6ed-38a8e60073dd",
-   "metadata": {},
-   "source": [
-    "These are parameters to poll for output (every `step` seconds) and to timeout the simulation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b630af34-5010-48be-ba8f-03535f52b08e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "step = 60\n",
-    "timeout = 600"
    ]
   },
   {
@@ -126,21 +104,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b92a44c3-d4a5-49fc-9780-fc410c7dfddf",
+   "id": "9a1a56b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "post_simulations_response = requests.post(simulations_url, json = inputJSON, headers = headers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a348a939-1c39-49a0-ab6c-a4d58fece209",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "post_simulations_response.status_code"
+    "post_simulations_url = \"/\".join([base_path, \"simulations\", \"model-runs\", model_slug])\n",
+    "post_simulations_url"
    ]
   },
   {
@@ -150,8 +119,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "post_simulations_response = requests.post(post_simulations_url, json = inputJSON, headers = headers)\n",
+    "\n",
+    "assert post_simulations_response.status_code == 200\n",
+    "\n",
     "post_simulations_content = post_simulations_response.json()\n",
     "post_simulations_content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05014dfc",
+   "metadata": {},
+   "source": [
+    "We need the ID to construct other URLs later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fd9b876",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation_id = str(post_simulations_content[\"id\"])"
    ]
   },
   {
@@ -169,34 +160,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_simulations_url = \"/\".join([simulations_url,str(post_simulations_response.json()[\"id\"])])\n",
+    "check_simulations_url = \"/\".join([base_path, \"simulations\", simulation_id, \"model-runs\", model_slug])\n",
     "check_simulations_url"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac0f9762-acae-4fcb-bab5-405332cfbcb5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "check_simulations_response = requests.get(check_simulations_url, headers = headers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2627cff6-bbeb-4239-8f03-59abe5dabb68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "check_simulations_response.status_code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e2f92aa6-9c8b-4c47-8564-11ce7b1d992e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_simulations_response = requests.get(check_simulations_url, headers = headers)\n",
+    "\n",
+    "assert check_simulations_response.status_code == 200\n",
+    "\n",
+    "check_simulations_content = check_simulations_response.json()\n",
+    "check_simulations_content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49bfc7ea",
+   "metadata": {},
+   "source": [
+    "The process can take some time to complete.\n",
+    "The following code polls the API to check for success every `step` seconds, with a `timeout` in seconds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab2eed67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step = 60\n",
+    "timeout = 600\n",
+    "\n",
+    "def is_complete(response):\n",
+    "    \"\"\"Check that the response returned 'complete'\"\"\"\n",
+    "    return response.json()[\"status\"] == \"complete\"\n",
+    "\n",
+    "try:\n",
+    "    check_simulations_response = polling.poll(\n",
+    "        lambda: requests.get(check_simulations_url, headers = headers),\n",
+    "        check_success=is_complete,\n",
+    "        step=step,\n",
+    "        timeout=timeout)\n",
+    "except polling.TimeoutException:\n",
+    "    print(check_simulations_url+\" failed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c10728f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,20 +228,7 @@
    "id": "0dbf6f9e-b942-4fac-b4ee-297ce40fda8f",
    "metadata": {},
    "source": [
-    "## Export simulation output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2983adfe-2b7e-4455-bef4-a3f75b0f32b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "export_simulations_params = {\n",
-    "    \"model\": inputJSON[\"model_slug\"],\n",
-    "    \"format\": \"results\"\n",
-    "}"
+    "# Export simulation results"
    ]
   },
   {
@@ -232,37 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_simulations_url = \"/\".join([simulations_url,str(post_simulations_response.json()[\"id\"]),\"export\"])\n",
+    "export_simulations_url = \"/\".join([base_path, \"simulations\", simulation_id, \"model-runs\", model_slug, \"export\"])\n",
     "export_simulations_url"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d8da934e-724b-4cb1-b8a1-71ad9fb929d0",
-   "metadata": {},
-   "source": [
-    "The following code polls the API to check for success every `step` seconds, with a `timeout` in seconds."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c9ecab3-7291-4db9-b0f0-6e66421c794e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def is_200_response(response):\n",
-    "    \"\"\"Check that the response returned 'success'\"\"\"\n",
-    "    return response.status_code == 200\n",
-    "\n",
-    "try:\n",
-    "    export_simulations_response = polling.poll(\n",
-    "        lambda: requests.get(export_simulations_url, params = export_simulations_params, headers = headers),\n",
-    "        check_success=is_200_response,\n",
-    "        step=step,\n",
-    "        timeout=timeout)\n",
-    "except polling.TimeoutException:\n",
-    "    print(export_simulations_url+\" failed\")"
    ]
   },
   {
@@ -272,9 +249,391 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "export_simulations_response = requests.get(export_simulations_url, headers = headers)\n",
+    "\n",
+    "assert export_simulations_response.status_code == 200\n",
+    "\n",
     "export_simulations_content = export_simulations_response.json()\n",
     "export_simulations_content"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c003ad1f",
+   "metadata": {},
+   "source": [
+    "# Download simulation output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "853ad6d9",
+   "metadata": {},
+   "source": [
+    "If we need access to the full output and logs of the simulation, for example for debugging purposes, we can get that via the `download` endpoint."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61fd70d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_simulations_url = \"/\".join([base_path, \"simulations\", simulation_id, \"model-runs\", model_slug, \"download\"])\n",
+    "download_simulations_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c578631",
+   "metadata": {},
+   "source": [
+    "This endpoint returns a `307 Redirect` to another URL where the contents can be accessed (as a `.zip`). We could follow this and save them to a file in code, but for now we're just going to print the URL."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e70d1120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_simulations_response = requests.get(download_simulations_url, headers = headers, allow_redirects=False)\n",
+    "\n",
+    "assert download_simulations_response.status_code == 307\n",
+    "\n",
+    "download_simulations_response.headers['Location']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66a48238",
+   "metadata": {},
+   "source": [
+    "Copy and paste the URL above into a browser, and you'll be able to download the files to your machine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "284394dd",
+   "metadata": {},
+   "source": [
+    "# Groups of simulations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5705c36a",
+   "metadata": {},
+   "source": [
+    "The API can also be used to run multiple models on the same set of inputs, in the same way as the UI itself. This uses a different input schema."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17e8be67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputJSON = {\n",
+    "  \"regionID\": \"GB\",\n",
+    "  \"subregionID\": \"GB-ENG\",\n",
+    "  \"label\": \"Simulation\",\n",
+    "  \"customCalibrationDate\": \"2020-03-06\",\n",
+    "  \"interventionPeriods\": [\n",
+    "    {\n",
+    "      \"startDate\": \"2020-03-06\",\n",
+    "      \"socialDistancing\": \"aggressive\",\n",
+    "      \"schoolClosure\": \"aggressive\",\n",
+    "      \"caseIsolation\": \"aggressive\",\n",
+    "      \"voluntaryHomeQuarantine\": \"aggressive\",\n",
+    "      \"reductionPopulationContact\": 0\n",
+    "    }\n",
+    "  ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f3f310e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "post_simulations_url = \"/\".join([base_path, \"simulations\"])\n",
+    "post_simulations_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09c14775",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "post_simulations_response = requests.post(post_simulations_url, json = inputJSON, headers = headers)\n",
+    "\n",
+    "assert post_simulations_response.status_code == 200\n",
+    "\n",
+    "post_simulations_content = post_simulations_response.json()\n",
+    "post_simulations_content\n",
+    "\n",
+    "simulation_id = str(post_simulations_content[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bbfc04b",
+   "metadata": {},
+   "source": [
+    "This time, we want to check the status of the top-level simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82d7bc2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_simulations_url = \"/\".join([base_path, \"simulations\", simulation_id])\n",
+    "check_simulations_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61b151da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_simulations_response = requests.get(check_simulations_url, headers = headers)\n",
+    "\n",
+    "assert check_simulations_response.status_code == 200\n",
+    "\n",
+    "check_simulations_content = check_simulations_response.json()\n",
+    "check_simulations_content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31af96a6",
+   "metadata": {},
+   "source": [
+    "Again, we need to poll until the simulations are complete."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a63777e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step = 60\n",
+    "timeout = 600\n",
+    "\n",
+    "def is_complete(response):\n",
+    "    \"\"\"Check that the response returned 'complete'\"\"\"\n",
+    "    for model in response.json()[\"model_runs\"]:\n",
+    "        if model[\"status\"] in [\"pending\", \"in-progress\"]:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "try:\n",
+    "    check_simulations_response = polling.poll(\n",
+    "        lambda: requests.get(check_simulations_url, headers = headers),\n",
+    "        check_success=is_complete,\n",
+    "        step=step,\n",
+    "        timeout=timeout)\n",
+    "except polling.TimeoutException:\n",
+    "    print(check_simulations_url+\" failed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "807e31d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_simulations_content = check_simulations_response.json()\n",
+    "check_simulations_content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cd233f0",
+   "metadata": {},
+   "source": [
+    "We can then retrieve a summary of the results across the models:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fe015f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "case_summary_url = \"/\".join([base_path, \"simulations\", simulation_id, \"case-summary\"])\n",
+    "case_summary_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87b47f66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "case_summary_response = requests.get(case_summary_url, headers = headers)\n",
+    "\n",
+    "assert case_summary_response.status_code == 200\n",
+    "\n",
+    "case_summary_content = case_summary_response.json()\n",
+    "case_summary_content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc63e429",
+   "metadata": {},
+   "source": [
+    "If we want to get the details of a particular model, we can use the same endpoint as before."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0de920b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_simulations_url = \"/\".join([base_path, \"simulations\", simulation_id, \"model-runs\", \"wss\", \"export\"])\n",
+    "export_simulations_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "745eccd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_simulations_response = requests.get(export_simulations_url, headers = headers)\n",
+    "\n",
+    "assert export_simulations_response.status_code == 200\n",
+    "\n",
+    "export_simulations_content = export_simulations_response.json()\n",
+    "export_simulations_content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65bc8226",
+   "metadata": {},
+   "source": [
+    "Some models also support a `format` parameter, in order to get results back in alternatives formats."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b976a6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_simulations_response = requests.get(export_simulations_url, params = { \"format\": \"crystalcast\" }, headers = headers)\n",
+    "\n",
+    "assert export_simulations_response.status_code == 200\n",
+    "\n",
+    "export_simulations_content = export_simulations_response.text\n",
+    "export_simulations_content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc7a5192",
+   "metadata": {},
+   "source": [
+    "# Errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf718c55",
+   "metadata": {},
+   "source": [
+    "The following submits a simulation with the wrong configuration for the chosen model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4a4e1f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "post_simulations_url = \"/\".join([base_path, \"simulations\", \"model-runs\", \"wss\"])\n",
+    "post_simulations_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ed2949c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "post_simulations_response = requests.post(post_simulations_url, json = inputJSON, headers = headers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81c7f8d2",
+   "metadata": {},
+   "source": [
+    "This time, we expect to get back a `422` response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3352324",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert post_simulations_response.status_code == 422"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "411c1c40",
+   "metadata": {},
+   "source": [
+    "And we can see the error description:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c3915fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "post_simulations_response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8cb764f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
