Fix Julia/R examples for new API endpoints

--- a/julia/client.ipynb
+++ b/julia/client.ipynb
@@ -47,7 +47,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headers = OrderedDict(\"accept\"=>\"application/json; charset=utf-8\", \"Content-Type\"=>\"application/json\", \"Authorization\"=> \"Bearer \"*token);"
+    "model_slug = \"sir-ode-python\"\n",
+    "headers = OrderedDict(\n",
+    "    \"accept\"=>\"application/json; charset=utf-8\", \n",
+    "    \"Content-Type\"=>\"application/json\", \n",
+    "    \"Authorization\"=> \"Bearer \"*token\n",
+    ")"
    ]
   },
   {
@@ -66,34 +71,20 @@
    "outputs": [],
    "source": [
     "inputJSON = OrderedDict(\n",
-    "  \"model_slug\" => \"sir-ode-python\",\n",
-    "  \"config\" => Dict(\n",
-    "    \"p\" => [\n",
-    "      0.5,\n",
-    "      0.25\n",
-    "    ],\n",
-    "    \"u0\" => [\n",
-    "      0.99,\n",
-    "      0.01,\n",
-    "      0\n",
-    "    ],\n",
-    "    \"tspan\" => [\n",
-    "      0,\n",
-    "      10000\n",
-    "    ]\n",
-    "  )\n",
-    ");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "889fda7a-4026-4b55-a9da-2fdcb825f338",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stp = 60\n",
-    "timeout = 600;"
+    "  \"p\" => [\n",
+    "    0.5,\n",
+    "    0.25\n",
+    "  ],\n",
+    "  \"u0\" => [\n",
+    "    0.99,\n",
+    "    0.01,\n",
+    "    0\n",
+    "  ],\n",
+    "  \"tspan\" => [\n",
+    "    0,\n",
+    "    10000\n",
+    "  ]\n",
+    ")"
    ]
   },
   {
@@ -107,21 +98,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91b9512f-01c4-444f-b577-d870f9ad41f9",
+   "id": "c2f6de7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "post_simulations_response = HTTP.post(url * \"/api/simulations\", headers, json(inputJSON))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4446c1eb-c3ca-45e9-b66e-1e18180aaff8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HTTP.status(post_simulations_response)"
+    "post_simulations_url = url * \"/api/simulations/model-runs/\" * model_slug"
    ]
   },
   {
@@ -131,7 +112,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "post_simulations_response = HTTP.post(post_simulations_url, headers, json(inputJSON))\n",
+    "\n",
+    "@assert HTTP.status(post_simulations_response) == 200\n",
+    "\n",
     "post_simulations_content = JSON.parse(String(HTTP.body(post_simulations_response)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e77eb34c",
+   "metadata": {},
+   "source": [
+    "We need the ID to construct other URLs later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b72b658",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulation_id = string(post_simulations_content[\"id\"])"
    ]
   },
   {
@@ -149,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_simulations_url = url * \"/api/simulations/\" * string(post_simulations_content[\"id\"])"
+    "check_simulations_url = url * \"/api/simulations/\" * simulation_id * \"/model-runs/\" * model_slug"
    ]
   },
   {
@@ -159,37 +162,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_simulations_response = HTTP.get(check_simulations_url, headers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1c681ed-4921-4dc5-ae15-f13b49aba777",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HTTP.status(check_simulations_response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0d4bbab-08e1-4d64-90b9-c2e4619cd81b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "check_simulations_response = HTTP.get(check_simulations_url, headers)\n",
+    "\n",
+    "@assert HTTP.status(check_simulations_response) == 200\n",
+    "\n",
     "check_simulations_content = JSON.parse(String(HTTP.body(check_simulations_response)))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36b1ecba",
+   "metadata": {},
+   "source": [
+    "The process can take some time to complete.\n",
+    "The following code polls the API to check for success every `step` seconds, with a `timeout` in seconds."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5cd9541-1af0-4e79-af88-a51351eb2c3d",
+   "id": "889fda7a-4026-4b55-a9da-2fdcb825f338",
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_simulations_content[\"model_runs\"]"
+    "stp = 60\n",
+    "timeout = 600\n",
+    "\n",
+    "tm = 0\n",
+    "check_simulations_response = nothing\n",
+    "while tm <= timeout\n",
+    "    check_simulations_response = HTTP.get(check_simulations_url, headers)\n",
+    "    check_simulations_content = JSON.parse(String(HTTP.body(check_simulations_response)))\n",
+    "    if check_simulations_content[\"status\"] == \"complete\"\n",
+    "        break\n",
+    "    end\n",
+    "    sleep(stp)\n",
+    "    tm += stp\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be0d4033",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_simulations_content"
    ]
   },
   {
@@ -203,25 +222,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaefe239-e577-4b25-bba4-a79cb6ede8f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "export_simulations_params = OrderedDict(\n",
-    "    \"model\" => inputJSON[\"model_slug\"],\n",
-    "    \"format\" => \"results\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f97aafa7-f278-4068-905c-d9718b4e0bbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_simulations_url =  url * \"/api/simulations/\" *  string(post_simulations_content[\"id\"]) * \"/export\"\n",
-    "export_simulations_url"
+    "export_simulations_url =  url * \"/api/simulations/\" * simulation_id * \"/model-runs/\" * model_slug * \"/export\""
    ]
   },
   {
@@ -231,26 +236,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tm = 0\n",
-    "export_simulations_response = nothing\n",
-    "while tm <= timeout\n",
-    "    export_simulations_response = HTTP.get(export_simulations_url, headers, query = export_simulations_params, status_exception = false)\n",
-    "    if HTTP.status(export_simulations_response)==200\n",
-    "        break\n",
-    "    end\n",
-    "    sleep(stp)\n",
-    "    tm += stp\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b2dfaf7-bd63-4b07-80bc-4c7702275054",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "check_simulations_content = JSON.parse(String(HTTP.body(export_simulations_response)))"
+    "export_simulations_response = HTTP.get(export_simulations_url, headers)\n",
+    "\n",
+    "@assert HTTP.status(export_simulations_response) == 200\n",
+    "\n",
+    "export_simulations_content = JSON.parse(String(HTTP.body(export_simulations_response)))"
    ]
   }
  ],
