--- a/python/client.ipynb
+++ b/python/client.ipynb
@@ -43,7 +43,7 @@
     "token = os.getenv(\"API_TOKEN\")\n",
     "assert token\n",
     "\n",
-    "base_path = os.getenv(\"API_BASE_URL\", \"https://covid-modelling-stg.epcc.ed.ac.uk/api\")"
+    "base_path = os.getenv(\"API_BASE_URL\", \"https://covid-modelling-stg.epcc.ed.ac.uk\")"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "post_simulations_url = \"/\".join([base_path, \"simulations\", \"model-runs\", model_slug])\n",
+    "post_simulations_url = \"/\".join([base_path, \"api\", \"simulations\", \"model-runs\", model_slug])\n",
     "post_simulations_url"
    ]
   },
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_simulations_url = \"/\".join([base_path, \"simulations\", simulation_id, \"model-runs\", model_slug])\n",
+    "check_simulations_url = \"/\".join([base_path, \"api\", \"simulations\", simulation_id, \"model-runs\", model_slug])\n",
     "check_simulations_url"
    ]
   },
@@ -238,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_simulations_url = \"/\".join([base_path, \"simulations\", simulation_id, \"model-runs\", model_slug, \"export\"])\n",
+    "export_simulations_url = \"/\".join([base_path, \"api\", \"simulations\", simulation_id, \"model-runs\", model_slug, \"export\"])\n",
     "export_simulations_url"
    ]
   },
@@ -280,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_simulations_url = \"/\".join([base_path, \"simulations\", simulation_id, \"model-runs\", model_slug, \"download\"])\n",
+    "download_simulations_url = \"/\".join([base_path, \"api\", \"simulations\", simulation_id, \"model-runs\", model_slug, \"download\"])\n",
     "download_simulations_url"
    ]
   },
@@ -362,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "post_simulations_url = \"/\".join([base_path, \"simulations\"])\n",
+    "post_simulations_url = \"/\".join([base_path, \"api\", \"simulations\"])\n",
     "post_simulations_url"
    ]
   },
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_simulations_url = \"/\".join([base_path, \"simulations\", simulation_id])\n",
+    "check_simulations_url = \"/\".join([base_path, \"api\", \"simulations\", simulation_id])\n",
     "check_simulations_url"
    ]
   },
@@ -478,7 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "case_summary_url = \"/\".join([base_path, \"simulations\", simulation_id, \"case-summary\"])\n",
+    "case_summary_url = \"/\".join([base_path, \"api\", \"simulations\", simulation_id, \"case-summary\"])\n",
     "case_summary_url"
    ]
   },
@@ -512,7 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_simulations_url = \"/\".join([base_path, \"simulations\", simulation_id, \"model-runs\", \"wss\", \"export\"])\n",
+    "export_simulations_url = \"/\".join([base_path, \"api\", \"simulations\", simulation_id, \"model-runs\", \"wss\", \"export\"])\n",
     "export_simulations_url"
    ]
   },
@@ -577,7 +577,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "post_simulations_url = \"/\".join([base_path, \"simulations\", \"model-runs\", \"wss\"])\n",
+    "post_simulations_url = \"/\".join([base_path, \"api\", \"simulations\", \"model-runs\", \"wss\"])\n",
     "post_simulations_url"
    ]
   },
